2022-06-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp: Refactor.  Drop unnecessary
	prototype for static function.  Use idiomatic C++98 null pointer
	constant.  Annotate it as null pointer to ease any future
	migration to ISO C++11.
	(make_message): Rename this...
	(make_string): ...to this.  Align more closely with contemporary
	version of example from Linux man-pages printf(3) page.  Use
	`vsnprintf()` to determine size of memory buffer needed prior to
	allocation instead of iteratively growing it until it is large
	enough.  Always die if `vsnprintf()` fails: this function now
	always returns a valid pointer if it returns at all.
	(makeFileName, setupAntiAlias, imageList::createPage,
	imageList::createImage): Update call sites to use
	`make_string()`.
	(char_buffer::read_file, makeTempFiles): Demote return type from
	`int` to `void`.  Stop returning after calling functions that
	don't return.
	(char_buffer::read_file): Call `sys_fatal()` if `fread()`
	returns an error, similarly to other calls into the standard C
	library that this file makes.  Improve check for error from
	`fread()` by not regarding a return value of zero when the
	end-of-file indicator is set as an error condition.
	(makeFileName, checkImageDir, char_buffer::run_output_filter,
	scanArguments): Call `fatal()` instead of `error()` and then
	`exit(1)`.
	(makeFileName, scanArguments): Dismiss Shlemiel the Painter:
	save return value of `strlen()` and call `strcpy()` multiple
	times instead of mixing `strcpy()` and `strcat()`; the latter
	approach rescans the string unnecessarily.
	(char_buffer::run_output_filter): Stop passing unnecessary null
	pointer argument to diagnostic message functions.  Stop calling
	`fflush()` after libgroff diagnostic function, which always
	{ultimately} flushes the standard error stream itself.
	(makeTempFiles, do_file, main): Boolify.
	(makeTempFiles, do_file): Reorder null pointer equality